.provarCaches/00Df2000001KKNJEA4/objects/Incap311SC__Console_Section_Field_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Incap311SC__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311SC__Console_Field_Config__c</fullName>
        <label>Console Field Config</label>
        <referenceTo>Incap311SC__Fields__mdt</referenceTo>
        <relationshipLabel>Section Fields</relationshipLabel>
        <relationshipName>Section_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Incap311SC__Console_Page_Section_Config__c</fullName>
        <label>Console Page Section Config</label>
        <referenceTo>Incap311SC__Console_Page_Section_Config__mdt</referenceTo>
        <relationshipLabel>Section Fields</relationshipLabel>
        <relationshipName>Section_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Incap311SC__Custom_Validations__c</fullName>
        <label>Custom Validations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incap311SC__Default_Value__c</fullName>
        <label>Default Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311SC__Order__c</fullName>
        <description>Used to order the elements on UI</description>
        <inlineHelpText>Used for ordering the elements on UI</inlineHelpText>
        <label>Order</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311SC__Override_Label__c</fullName>
        <inlineHelpText>By default, system will use label from Salesforce object. If value for this field is provided then it will use this label.</inlineHelpText>
        <label>Override Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Console Section Field Mapping</label>
    <pluralLabel>Section Fields</pluralLabel>
</CustomObject>